  (RBL-2172)
* Groups can be added to releases now by creating an image-less build and then
  adding it to a release (RBL-2665)
* When publishing a release, there is now a checkbox option to publish the 
  release to an Update Service (RBL-2541)
* Xen-compatible Hard Disk images are no longer labelled as QEMU or
  Parallels-compatible. (RBL-1589)

Build System Changes
--------------------

* Citrix XenServer (TM) is now an available image type. (RBL-2642)

Internal Changes
----------------
* rBuilder now requires Conary 2.0. (RBL-2580)
* New rBuilder installations are created using PostgreSQL as the repository
  database.  Existing installations are given a new plugin that will migrate
  existing Sqlite repositories to PostgreSQL.  (RBL-2650)
* The same rBuilder codebase may be built for rBuilder Online as well as
  rBuilder Appliance; for rBuilder Online, this means that the 'rBuilderOnline'
  configuration parameter must be set to True. Additionally, links to legal
  information is now managed outside the codebase; use "legaleseLink",
  "privacyPolicyLink", and "tosLink" to point to legal information,
  privacy policy and terms of service home pages, respectively.

Command-Line Client Changes
---------------------------

* The command-line client's build-create command now accepts the
  --name option to set the name of the new build, and --build-notes
  and --build-notes-file to set the build notes from the command-line
  and from a file, respectively. (RBL-2486)

Bug Fixes
---------

* A bug that prevented image builds from succeeding when a project is
  hidden has been fixed. (RBL-2619)
* A bug that would cause an Internal Server Error when attempting to
  generate a License and Crypto report if the underlying Conary
  repository operation failed has been fixed. (RBL-2595)
* Commit mail, recent commits, and other data on installations migrated
  from rBuilder 3.x will now update correctly. (RBL-2648)
* An error that occured when creating builds with custom