@@ -39,6 +39,10 @@ Web Front End Changes
   release to an Update Service (RBL-2541)
 * Xen-compatible Hard Disk images are no longer labelled as QEMU or
   Parallels-compatible. (RBL-1589)
+* Creating new products is now a two step guided process, with the secondstep 
+  consisting of creating an initial version for the product.  Each product
+  version can contain its own build definitions for launching multiple builds
+  at the same time. (RBL-2715)
 
 Build System Changes
 --------------------
